# NOVA-GIT-SCANNER_22

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_kibana_scan.py
.claude/: settings.local.json
examples/: KIBANA_AETHERBOT_SCAN.md  KIBANA_EXECUTIVE_DOSSIER_FULL.md  KIBANA_FULL_FORENSIC.md
nova/: __init__.py  cli.py
nova/aetherbot/: __init__.py  brain.py  memory.py  ralph.py
nova/agents/: __init__.py  graph.py  state.py
nova/scanners/: __init__.py  code_rot.py  coder_guilt.py  performance.py  security.py
nova/utils/: __init__.py  display.py  vector_store.py
